--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,49 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# ===================================== #
+# Server #
+# ===================================== #
 
-# Folder config file
-Desktop.ini
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# ===================================== #
+# Unity generated #
+# ===================================== #
 
-# Windows shortcuts
-*.lnk
+Unity Project/Temp/
+Unity Project/Library/
 
-# =========================
-# Operating System Files
-# =========================
 
-# OSX
-# =========================
+
+# ===================================== #
+# Visual Studio / MonoDevelop generated #
+# ===================================== #
+
+Unity Project/App/ExportedObj/
+Unity Project/App/obj/
+Unity Project/Table/ExportedObj/
+Unity Project/Table/obj/
+*.svd
+*.userprefs
+*.csproj
+*.pidb
+*.suo
+*.sln
+*.user
+*.unityproj
+*.booproj
+
+
+
+
+# ===================================== #
+# OS generated #
+# ===================================== #
 
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
+.DS_Store?
 ._*
-
-# Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+ehthumbs.db
+Thumbs.db
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+
